<resources>
    <string name="app_name">WinWin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_username">USERNAME</string>
    <string name="hint_password">PASSWORD</string>
    <string name="btn_login">Login</string>
    <string name="text_forgot_password">Forgot Password ?</string>
    <string name="enter_username_error">Please enter your username</string>
    <string name="enter_password_error">Please enter your password</string>
    <string name="invalid_username_password_error">Invalid username or password</string>
    <string name="internet_unavailable_error">Please check your Internet connection</string>
    <string name="btn_okay">OKAY</string>
    <string name="text_sign_up">Don\'t have an account? Sign up</string>
    <string name="hint_enter_number">ENTER YOUR NUMBER</string>
    <string name="btn_send_otp">SEND OTP</string>
    <string name="enter_mobile_number_error">Please enter registered mobile number</string>
    <string name="enter_otp_error">Please enter otp</string>
    <string name="invalid_otp_error">Invalid OTP</string>
    <string name="something_went_wrong_error">Something went wrong</string>
    <string name="hint_enter_otp">OTP</string>
    <string name="btn_verify_otp">VERIFY OTP</string>
    <string name="hint_enter_old_password">ENTER OLD PASSWORD</string>
    <string name="hint_enter_new_password">ENTER YOUR NEW PASSWORD</string>
    <string name="btn_submit">SUBMIT</string>
    <string name="enter_new_password_error">Please enter your new password</string>
    <string name="invalid_password_error">Please enter a valid password</string>
    <string name="text_resend_otp">Resend Otp</string>
    <string name="title_baazaar_list">BAAZAAR LIST</string>
    <string name="lbl_kalyan_open">KALYAN OPEN</string>
    <string name="baazaar_time_value">Time : %s</string>
    <string name="baazaar_past_result_value">Past Result : %s</string>
    <string name="baazaar_last_result_value">Last Result : %s</string>
    <string-array name="navigation_menu_group">
        
        <item>RECHARGE</item>
        <item>WITHDRAWAL</item>
        <item>VIEW GAME HISTORY</item>
        <item>BAAZAR HISTORY</item>
        <item>WALLET BALANCE/POINTS</item>
        <item>ENQUIRY</item>
    </string-array>
    <string-array name="child_menu_game_history">
        <item>ALL GAMES</item>
        <item>SINGLE GAME</item>
        <item>PAANA GAME</item>
        <item>CP GAME</item>
        <item>MOTOR GAME</item>
        
        <item>BRACKET GAME</item>
    </string-array>
    <string-array name="baazaar_name_array">
        <item>KALYAN OPEN</item>
        <item>KALYAN CLOSE</item>
        <item>MAIN OPEN</item>
        <item>MAIN CLOSE</item>
        <item>KAATAA CHAAPA</item>
    </string-array>
    <string-array name="baazaar_time_array">
        <item>12:30 pm</item>
        <item>4:30 pm</item>
        <item>9:30 pm</item>
        <item>12:30 pm</item>
        <item>24 Hrs</item>
    </string-array>
    <string-array name="baazaar_past_result_array">
        <item>112</item>
        <item>777</item>
        <item>345</item>
        <item>456</item>
        <item>Kaata</item>
    </string-array>
    <string name="lbl_logout">Logout</string>
    <string name="app_exit_confirmaton">Are You Sure You Want To Exit?</string>
    <string name="app_unauthorized_msg">Unauthorized user!!</string>
    <string name="lbl_baazaar_time">Time</string>
    <string name="lbl_baazaar_last_result">Last Result</string>
    <string name="log_out_confirmaton">Are You Sure You Want To Logout?</string>
    <string name="lbl_news">News :</string>
    <string name="app_info_msg">This game is just for fun and it doesn\'t involve money</string>
    <string name="title_baazaar">BAAZAAR</string>
    <string name="baazaar_closed_msg">This Baazaar is closed for today</string>
    <string name="bonus_msg">%s Good Luck Points</string>
    <string name="kyc_info_msg">Verify your account to be eligible to withdraw</string>
    <string name="title_home">HOME</string>
    <string name="title_games">GAMES</string>
    <string name="btn_play">PLAY</string>
    <string-array name="game_name_array">
        <item>SINGLE</item>
        <item>PAANA</item>
        <item>CP</item>
        <item>MOTOR</item>
    </string-array>
    <string name="title_single_game">SINGLE</string>
    <string name="lbl_points">POINTS</string>
    <string name="lbl_timer">TIMER</string>
    <string name="lbl_total">TOTAL</string>
    <string name="lbl_clear_all">CLEAR ALL</string>
    <string name="lbl_final">FINAL</string>
    <string name="lbl_history">HISTORY</string>
    <string name="lbl_baazaar_history">BAAZAAR HISTORY</string>
    <string name="empty_bet_error">Please select a number before placing a bet</string>
    <string name="balance_low_error">Please recharge your wallet before placing </string>
    <string name="bet_placed_success_msg">Your bet has been placed successfully!!</string>
    <string name="point_error">Please select points for the selected number</string>
    <string name="insufficient_points_error">Please update your points before placing a bet</string>
    <string name="final_number_empty">\u2014</string>
    <string name="bet_confirmation_msg">Are You Sure You Want To Bet?</string>
    <string name="bet_time_expired_msg">Baazaar Timing has expired</string>
    <string name="maximum_single_game_bet_error">You cannot place a bet of more than 50,000 points on a Single Paana</string>
    <string-array name="game_number_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>0</item>
    </string-array>
    <string-array name="game_points_array">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
        <item>5000</item>
    </string-array>
    <string name="title_cp_game">CP</string>
    <string name="maximum_cp_game_bet_error">You cannot place a bet of more than 5,000 points on one Paana</string>
    <string-array name="cp_game_number_array">
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>99</item>
        <item>00</item>
    </string-array>
    <string name="title_motor_game">MOTOR</string>
    <string name="lbl_selected_points">Selected Points :</string>
    <string name="motor_bet_error">Please select a motor number before placing a bet</string>
    <string name="maximum_motor_game_bet_error">You cannot place a bet of more than 5,000 points on one Motor</string>
    <string name="title_game_history">GAME HISTORY</string>
    <string name="bet_history_empty_msg">Awaiting your first bet!</string>
    <string name="lbl_baazar_name">Baazar Name :</string>
    <string name="lbl_date">Date :</string>
    <string name="lbl_game_name">Game :</string>
    <string name="lbl_bet_points">Points :</string>
    <string name="lbl_bet_timing">Bet Timing :</string>
    <string name="lbl_booking_time">Booking Time :</string>
    <string name="lbl_bet_no">Bet No :</string>
    <string name="lbl_amount">Amount :</string>
    <string name="lbl_baazar_result">Baazar Result :</string>
    <string name="lbl_you_won">You Won :</string>
    <string name="btn_claim">CLAIM</string>
    <string name="title_all">ALL</string>
    <string name="title_paana_game">PAANA</string>
    <string name="select_paana_msg">Select the number to get the paana\'s</string>
    <string name="maximum_paana_game_bet_error">You cannot place a bet of more than 5,000 points on one Paana</string>
    <string name="paana_checkbox_select_error">Please select paana type before placing a bet</string>
    <string name="hint_paana_number">ENTER PAANA NUMBER</string>
    <string name="valid_paana_number_error">Please enter a valid Paana number</string>
    <string name="title_personal_info">PERSONAL INFO</string>
    <string name="lbl_mobile_no">Mobile No :</string>
    <string name="lbl_my_points">My Points :</string>
    <string name="lbl_change_photo">Change Profile Photo</string>
    <string name="lbl_change_password">Change Password</string>
    <string name="lbl_profile_photo">PROFILE PHOTO</string>
    <string name="lbl_change">Change</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_added_by">Added By</string>
    <string name="lbl_kyc">Kyc</string>
    <string name="name_updated_successful_msg">Your name has been updated successfully!!</string>
    <string-array name="select_image_title">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>
    <string name="title_wallet_info">WALLET INFO</string>
    <string name="lbl_your_name">YOUR NAME</string>
    <string name="lbl_your_number">YOUR NUMBER</string>
    <string name="lbl_wallet_balance">WALLET BALANCE</string>
    <string name="lbl_wallet_history">WALLET HISTORY</string>
    <string name="lbl_view">View</string>
    <string name="btn_reload">RELOAD</string>
    <string name="wallet_updated_msg">Wallet balance updated successfully!!</string>
    <string name="title_edit_profile_name">Edit Profile Name</string>
    <string name="hint_first_name">FIRST NAME</string>
    <string name="hint_last_name">LAST NAME</string>
    <string name="btn_done">Done</string>
    <string name="btn_cancel">Cancel</string>
    <string name="permission_storage_title">Allow PinnacleMatka to use your phone\'s storage?</string>
    <string name="lbl_column_description">DESCRIPTION</string>
    <string name="lbl_column_withdraw">WITHDRAW</string>
    <string name="lbl_column_deposit">DEPOSIT</string>
    <string name="lbl_column_balance">BALANCE</string>
    <string name="title_aap_update">Update Now</string>
    <string name="app_update_message">To unlock amazing new features please update your app</string>
    <string name="hint_old_password">OLD PASSWORD</string>
    <string name="hint_new_password">NEW PASSWORD</string>
    <string name="hint_confirm_password">CONFIRM PASSWORD</string>
    <string name="password_hint">1 Uppercase, 1 Lowercase, 1 digit and Minimum length 8</string>
    <string name="hint_amount">AMOUNT</string>
    <string name="title_kyc">KYC</string>
    <string name="hint_account_holder_name">ACCOUNT HOLDER NAME</string>
    <string name="hint_account_number">ACCOUNT NUMBER</string>
    <string name="hint_confirm_account_number">CONFIRM ACCOUNT NUMBER</string>
    <string name="hint_ifsc">IFSC</string>
    <string name="hint_account_type">ACCOUNT TYPE</string>
    <string name="title_withdrawal">WITHDRAW POINTS</string>
</resources>