<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context="com.pinnacle.winwin.ui.changepassword.ChangePasswordScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@id/editTextOldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:inputType="textPassword"
            android:hint="@string/hint_old_password"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/border_gold"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_goneMarginTop="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/border_gold"
            android:hint="@string/hint_new_password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/editTextOldPassword" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/textViewPasswordHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:padding="8dp"
            android:text="@string/password_hint"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/editTextNewPassword"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@id/editTextConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/border_gold"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/textViewPasswordHint" />

        <Button
            android:id="@id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/bg_gold_gradient"
            android:gravity="center"
            android:text="@string/btn_submit"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/editTextConfirmPassword"
            android:foreground="?attr/selectableItemBackground"
            android:theme="@style/AppTheme.BlueRipple"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>