<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_landing"
    tools:context="com.pinnacle.winwin.ui.withdrawal.WithdrawalScreenActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_bulb"
        android:drawableEnd="@drawable/ic_bulb"
        android:drawablePadding="12dp"
        android:gravity="center"
        android:padding="@dimen/extra_medium_margin"
        android:text="@string/title_withdrawal"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/menu_title_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@id/editTextAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:inputType="number"
            android:hint="@string/hint_amount"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:background="@drawable/border_gold"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/textViewWithdrawHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:padding="8dp"
            tools:text="@string/password_hint"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/editTextAmount"/>

        <Button
            android:id="@id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="120dp"
            android:layout_marginRight="120dp"
            android:text="@string/btn_submit"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_gold_gradient"
            android:foreground="?attr/selectableItemBackground"
            android:theme="@style/AppTheme.BlueRipple"
            app:layout_constraintTop_toBottomOf="@id/textViewWithdrawHint"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>